@@ -1,4 +1,5 @@
 14.nov (ws)
+      - fix #10049, #13668: Closing a score with part via shortcut does nothing
       - fix #13409: Double-clicking object in palette when hairpin/slur/tie on score
         is in edit mode causes crash (patch from Gai-Luron)
       - fix #13590: disable palettes during play
